gcc/testsuite/rust/rustc/ui/parser/removed-syntax-record.rs
type t = { f: () }; // { dg-error "" "" { target *-*-* } }

